# src

./: .gitignore
example/: CMakeLists.txt  package.xml
example/launch/: sub_pub.py  sub_pub.xml  sub_pub.yaml
example/src/: publisher.cpp  subscriber.cpp
laracna/: CMakeLists.txt  package.xml
laracna/config/: joint_names_laracna.yaml
laracna/launch/: display.launch
laracna/meshes/: coxa_lt.STL  tibia_lt.STL  tibia_rb.STL
laracna/urdf/: laracna.urdf
laracna_gazebo/: README.md
laracna_gazebo/ros_gz_example_bringup/config/: ros_gz_example_bridge copy.yaml  ros_gz_example_bridge.yaml
laracna_gazebo/ros_gz_example_bringup/launch/: laracna.launch.py  rrbot_setup.launch.py
laracna_gazebo/ros_gz_example_description/meshes/: base_link_collider.stl  coxa_lb_collider.stl  coxa_rt.stl  femur_lt.stl  femur_rt.stl  tibia_lb_collider.stl  tibia_rt.stl
laracna_gazebo/ros_gz_example_description/models/laracna/: laracna.ignore_urdf  model.config  model.sdf  model_original.sdf  urdf2sdf.md
laracna_gazebo/ros_gz_example_gazebo/worlds/: laracna_world.sdf  laracna_world_original.sdf
laracna_hw_sim/: CMakeLists.txt  package.xml
laracna_hw_sim/config/: params.yaml
laracna_hw_sim/include/laracna_hw_sim/: driver_sim.hpp  ik.hpp  leg.hpp  leg_config.hpp  leg_move_controller.hpp  leg_publishers.hpp  math_utils.hpp  move_manager.hpp
laracna_hw_sim/launch/: laracna_hw_sim.launch.xml
laracna_hw_sim/src/: driver_sim.cpp  ik.cpp  laracna_hw_sim.cpp  leg_move_controller.cpp  move_manager.cpp
laracna_pose/: CMakeLists.txt  CMakeListsIgnore.txt  package.xml
laracna_pose/include/laracna_pose/: body_pose.hpp  body_publisher.hpp  choreography_publisher.hpp  leg_pose.hpp  leg_publisher.hpp  leg_publisher_config.hpp  leg_publisher_map.hpp  leg_subscriber.hpp  leg_subscriber_map.hpp  move.hpp  pose_node.hpp  pose_watcher.hpp  publisher_creator.hpp  vector3.hpp
laracna_pose/launch/: pose_node_launch.xml
laracna_pose/src/: body_publisher.cpp  leg_publiser.hpp  leg_publisher.cpp  leg_publisher_config.hpp  main.cpp  publisher_creator.cpp  sequencer.hpp
laracna_pose/tests/: CMakeLists.txt  README.md  test_vector3.cpp
laracna_sim/: CMakeLists.txt  package.xml
laracna_sim/data/: laracna.csv
laracna_sim/launch/: display.launch.py  gazebo.launch
laracna_sim/meshes/: femur_lb_collider.stl  femur_rb.STL  tibia_lb.STL
laracna_sim/meshes_bk/: coxa_lb.STL  coxa_rb.STL  femur_lb.STL
laracna_sim/urdf/: laracna.urdf
